packages/ant-tasks/idldepend/source/idldepend/javacc/generated/IDLParser.java
/* Generated By:JavaCC: Do not edit this line. IDLParser.java */
package idldepend.javacc.generated;

import idldepend.idl.IDLToJavaMapping;
import idldepend.javacc.LocatedParseException;

import java.io.Reader;
import java.util.HashMap;

/**
 * Changes on the jj file included with the JavaCC 2.1 distribution,
 * to reflect the changes on CORBA 2.3.
 * Note that this parser receives content already preprocessed, where
 * every comment has been removed.
 * Line information is received through lines with the following format:
 * #line number file
 * It accepts as well lines #pragma, but it discards all of them but #pragma prefix
 */
public class IDLParser implements IDLParserConstants {

  public IDLParser(Reader reader, IDLToJavaMapping mapper) {
    this(reader);
    this.mapper=mapper;
  }

  public void parse() throws ParseException{
    addParser(token_source, this);
    try {
      specification();
    }
    catch(ParseException ex) {
      if (lineFile==null) {
        throw ex;
      }
      else {
        int lineError =token.next.beginLine+lineLine-line-1;
        throw new LocatedParseException(ex, lineFile, lineError);
      }
    }
    finally{
      removeParser(token_source);
    }
  }

  final static private int PRIMITIVE = 0;
  final static private int SEQUENCE = 1;
  final static private int NO_PRIMITIVE = 2;
  final static private int NO_TYPEDEF = 3;

  /**
   * It is needed to keep track of the right line and file being parsed.
   */
  public void lineDirective(String directive, int thoughtLine) {
    line=thoughtLine;
    int space=directive.indexOf(" ",6);
    lineLine=Integer.valueOf(directive.substring(6,space)).intValue();
    lineFile=directive.substring(space+1);
    mapper.prefixPragma((String) prefixes.get(lineFile));
  }

  public void linePragma(String directive) {
    String withoutPragma = directive.substring(7).trim();
    if (withoutPragma.startsWith("prefix")) {
      String prefix=withoutPragma.substring(6).trim();
      int length=prefix.length();
      if (length>1 && prefix.charAt(0)=='"' && prefix.charAt(length-1)=='"') {
        prefix=prefix.substring(1,length-1);
      }
      else {
        prefix=null;
      }
      prefixes.put(lineFile, prefix);
      mapper.prefixPragma(prefix);
    }
  }

  private IDLToJavaMapping mapper;
  private HashMap prefixes = new HashMap();
  private int line;
  private int lineLine;    //information extracted from #line directives
  private String lineFile; //information extracted from #line directives

  /**
   * Following variables/methods are required to map
   * IDLParserTokenManagers and IDLParsers, which is needed
   * if static generation is not used on the JavaCC generation.
   * (The IDLParserTokenManager needs to communicate to the
   * IDLParser on #line and #pragma directives, but the
   * IDLParserTokenManager has no knowledge on the IDLParser to
   * use!
   */
  static private HashMap IDLParsers = new HashMap();
  static IDLParser getParser(IDLParserTokenManager m )
    {return (IDLParser) IDLParsers.get(m);}
  static void addParser(IDLParserTokenManager m, IDLParser parser)
    {IDLParsers.put(m, parser);}
  static void removeParser(IDLParserTokenManager m)
    {IDLParsers.remove(m);}

/* Production 1. Changed from definition+ to definition* !!! */
/* This production must be changed to support "import" */
  final public void specification() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 8:
      case 11:
      case 12:
      case 13:
      case 14:
      case 18:
      case 19:
      case 28:
      case 43:
      case 44:
      case 56:
      case 57:
      case 61:
      case 71:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      definition();
    }
    jj_consume_token(0);
  }

/* Production 2 */
/* Thi sproduction must change to support type_id, type_prefix, event, component, home_decl */
  final public void definition() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 43:
    case 44:
    case 56:
    case 57:
    case 61:
      type_dcl();
      jj_consume_token(7);
      break;
    case 28:
      const_dcl();
      jj_consume_token(7);
      break;
    case 71:
      except_dcl();
      jj_consume_token(7);
      break;
    default:
      jj_la1[1] = jj_gen;
      if (jj_2_1(2)) {
        interfacex();
        jj_consume_token(7);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 8:
          module();
          jj_consume_token(7);
          break;
        case 11:
        case 18:
        case 19:
          value();
          jj_consume_token(7);
          break;
        default:
          jj_la1[2] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

/* Production 3 */
  final public void module() throws ParseException {
  String name;
    jj_consume_token(8);
    name = identifier();
       mapper.enteredScope(name,true);
    jj_consume_token(9);
    label_2:
    while (true) {
      definition();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 8:
      case 11:
      case 12:
      case 13:
      case 14:
      case 18:
      case 19:
      case 28:
      case 43:
      case 44:
      case 56:
      case 57:
      case 61:
      case 71:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
    }
    jj_consume_token(10);
       mapper.exitedScope();
  }

/* Production 4 */
  final public void interfacex() throws ParseException {
    if (jj_2_2(4)) {
      interface_dcl();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 11:
      case 12:
      case 13:
        forward_dcl();
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

/* Production 5 */
  final public void interface_dcl() throws ParseException {
  String name;
    name = interface_header();
                               mapper.enteredScope(name,false);
    jj_consume_token(9);
    interface_body();
    jj_consume_token(10);
                               mapper.exitedScope();
  }

/* Production 6 */
/* Changed to support local interfaces */
  final public void forward_dcl() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 11:
    case 12:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 11:
        jj_consume_token(11);
        break;
      case 12:
        jj_consume_token(12);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    jj_consume_token(13);
    identifier();
  }

/* Production 7 */
/* Changed to support local interfaces */
/* Changed to support pseudo interfaces */
  final public String interface_header() throws ParseException {
  String name;
  boolean abst=false, local=false, pseudo=false;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 11:
    case 12:
    case 14:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 11:
        jj_consume_token(11);
                 abst=true;
        break;
      case 12:
        jj_consume_token(12);
                                        local=true;
        break;
      case 14:
        jj_consume_token(14);
                                                                 pseudo=true;
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    jj_consume_token(13);
    name = identifier();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 15:
      inheritance_spec();
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
      if (pseudo) mapper.mapPseudoInterface(name);
      else mapper.mapInterface(name, abst, local);
      {if (true) return name;}
    throw new Error("Missing return statement in function");
  }

/* Production 8 */
  final public void interface_body() throws ParseException {
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 17:
      case 28:
      case 43:
      case 44:
      case 45:
      case 46:
      case 47:
      case 48:
      case 49:
      case 50:
      case 51:
      case 52:
      case 53:
      case 54:
      case 55:
      case 56:
      case 57:
      case 61:
      case 65:
      case 66:
      case 69:
      case 70:
      case 71:
      case 72:
      case 73:
      case 79:
      case ID:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_3;
      }
      export();
    }
  }

/* Production 9 */
/* Production 9 must change to support type_id & type_prefix */
  final public void export() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 43:
    case 44:
    case 56:
    case 57:
    case 61:
      type_dcl();
      jj_consume_token(7);
      break;
    case 28:
      const_dcl();
      jj_consume_token(7);
      break;
    case 71:
      except_dcl();
      jj_consume_token(7);
      break;
    case 69:
    case 70:
      attr_dcl();
      jj_consume_token(7);
      break;
    case 17:
    case 45:
    case 46:
    case 47:
    case 48:
    case 49:
    case 50:
    case 51:
    case 52:
    case 53:
    case 54:
    case 55:
    case 65:
    case 66:
    case 72:
    case 73:
    case 79:
    case ID:
      op_dcl();
      jj_consume_token(7);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/* Production 10 */
  final public void inheritance_spec() throws ParseException {
    jj_consume_token(15);
    interface_name();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 16:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_4;
      }
      jj_consume_token(16);
      interface_name();
    }
  }

/* Production 11 */
  final public void interface_name() throws ParseException {
    scoped_name();
  }

/* Production 12 */
  final public void scoped_name() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 17:
      jj_consume_token(17);
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    identifier();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 17:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_5;
      }
      jj_consume_token(17);
      identifier();
    }
  }

/* Production 13 */
  final public void value() throws ParseException {
    if (jj_2_3(3)) {
      value_dcl();
    } else if (jj_2_4(3)) {
      value_abs_dcl();
    } else if (jj_2_5(3)) {
      value_box_dcl();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 11:
      case 18:
        value_forward_dcl();
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

/* Production 14 */
  final public void value_forward_dcl() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 11:
      jj_consume_token(11);
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    jj_consume_token(18);
    identifier();
  }

/* Production 15 */
  final public void value_box_dcl() throws ParseException {
  String name;
  int type;
    jj_consume_token(18);
    name = identifier();
    type = type_spec();
   mapper.mapValuebox(name, type==PRIMITIVE);
  }

/* Production 16 */
  final public void value_abs_dcl() throws ParseException {
  String name;
    jj_consume_token(11);
    jj_consume_token(18);
    name = identifier();
    value_inheritance_spec();
    mapper.mapValuetype(name, false);
    mapper.enteredScope(name, false);
    jj_consume_token(9);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 17:
      case 28:
      case 43:
      case 44:
      case 45:
      case 46:
      case 47:
      case 48:
      case 49:
      case 50:
      case 51:
      case 52:
      case 53:
      case 54:
      case 55:
      case 56:
      case 57:
      case 61:
      case 65:
      case 66:
      case 69:
      case 70:
      case 71:
      case 72:
      case 73:
      case 79:
      case ID:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_6;
      }
      export();
    }
    jj_consume_token(10);
    mapper.exitedScope();
  }

/* Production 17 */
  final public void value_dcl() throws ParseException {
  String name;
  boolean withFactory=false, thisOne;
    name = value_header();
    mapper.enteredScope(name, false);
    jj_consume_token(9);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 17:
      case 22:
      case 23:
      case 24:
      case 28:
      case 43:
      case 44:
      case 45:
      case 46:
      case 47:
      case 48:
      case 49:
      case 50:
      case 51:
      case 52:
      case 53:
      case 54:
      case 55:
      case 56:
      case 57:
      case 61:
      case 65:
      case 66:
      case 69:
      case 70:
      case 71:
      case 72:
      case 73:
      case 79:
      case ID:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_7;
      }
      thisOne = value_element();
                                withFactory|=thisOne;
    }
    jj_consume_token(10);
    mapper.exitedScope();
    mapper.mapValuetype(name, withFactory);
  }

/* Production 18 */
  final public String value_header() throws ParseException {
  String name;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 19:
      jj_consume_token(19);
      break;
    default:
      jj_la1[19] = jj_gen;
      ;
    }
    jj_consume_token(18);
    name = identifier();
    value_inheritance_spec();
    {if (true) return name;}
    throw new Error("Missing return statement in function");
  }

/* Production 19 */
  final public void value_inheritance_spec() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 15:
      jj_consume_token(15);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 20:
        jj_consume_token(20);
        break;
      default:
        jj_la1[20] = jj_gen;
        ;
      }
      value_name();
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 16:
          ;
          break;
        default:
          jj_la1[21] = jj_gen;
          break label_8;
        }
        jj_consume_token(16);
        value_name();
      }
      break;
    default:
      jj_la1[22] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 21:
      jj_consume_token(21);
      interface_name();
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 16:
          ;
          break;
        default:
          jj_la1[23] = jj_gen;
          break label_9;
        }
        jj_consume_token(16);
        interface_name();
      }
      break;
    default:
      jj_la1[24] = jj_gen;
      ;
    }
  }

/* Production 20 */
  final public void value_name() throws ParseException {
    scoped_name();
  }

/* Production 21 : returns true if it includes a factory*/
  final public boolean value_element() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 17:
    case 28:
    case 43:
    case 44:
    case 45:
    case 46:
    case 47:
    case 48:
    case 49:
    case 50:
    case 51:
    case 52:
    case 53:
    case 54:
    case 55:
    case 56:
    case 57:
    case 61:
    case 65:
    case 66:
    case 69:
    case 70:
    case 71:
    case 72:
    case 73:
    case 79:
    case ID:
      export();
                    {if (true) return false;}
      break;
    case 22:
    case 23:
      state_member();
                    {if (true) return false;}
      break;
    case 24:
      init_dcl();
                    {if (true) return true;}
      break;
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/* Production 22 */
  final public void state_member() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 22:
      jj_consume_token(22);
      break;
    case 23:
      jj_consume_token(23);
      break;
    default:
      jj_la1[26] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    type_spec();
    declarators(NO_TYPEDEF);
    jj_consume_token(7);
  }

/* Production 23 */
/* must change to support [<raises_expr>] */
  final public void init_dcl() throws ParseException {
    jj_consume_token(24);
    identifier();
    jj_consume_token(25);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 27:
      init_param_decls();
      break;
    default:
      jj_la1[27] = jj_gen;
      ;
    }
    jj_consume_token(26);
    jj_consume_token(7);
  }

/* Production 24 */
  final public void init_param_decls() throws ParseException {
    init_param_decl();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 16:
        ;
        break;
      default:
        jj_la1[28] = jj_gen;
        break label_10;
      }
      jj_consume_token(16);
      init_param_decl();
    }
  }
